fixed minor issues with header and userline post text wrapping

--- a/client/src/components/Userline/Userline.css
+++ b/client/src/components/Userline/Userline.css
@@ -35,6 +35,9 @@
 .post_badges * {
   margin-right: 10px;
 }
+.post_text {
+  word-wrap: break-word;
+}
 
 #loader {
   position: relative;
